fixed cart closwButton overflow

--- a/assets/styles/blocks/_cartContact.scss
+++ b/assets/styles/blocks/_cartContact.scss
@@ -132,6 +132,7 @@
     }
 
     &-closeButton {
+        z-index: 19;
         &:hover {
             svg {
                 fill: $mediumGreen !important;
